<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PrimaryActivity"
    android:background="@color/background"
    android:id="@+id/theLayout">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/APP_BUILD_IT_BIGGER"
        android:id="@+id/builtButton"
        android:background="@color/build"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:onClick="goBuild"
        android:clickable="true"
        style="@style/buttonStyle"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/APP_PORTFOLIO_TITLE"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:typeface="monospace"
        android:textSize="25dp"
        android:singleLine="false"
        android:phoneNumber="false"
        android:textStyle="bold"
        android:textColor="@color/titleText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/APP_XYZ_READER"
        android:id="@+id/xyzButton"
        android:background="@color/xyz"
        android:layout_below="@+id/builtButton"
        android:layout_centerHorizontal="true"
        android:onClick="goXYZ"
        android:clickable="true"
        style="@style/buttonStyle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/APPS_SCORES_APP"
        android:id="@+id/scoreButton"
        android:background="@color/scores"
        android:onClick="goScores"
        android:clickable="false"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        style="@style/buttonStyle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/APP_LIBRARY_APP"
        android:id="@+id/libButton"
        android:background="@color/library"
        android:onClick="goLibrary"
        android:clickable="false"
        android:layout_below="@+id/scoreButton"
        android:layout_alignLeft="@+id/scoreButton"
        android:layout_alignStart="@+id/scoreButton"
        style="@style/buttonStyle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/APP_SPOTIFY_STREAMER"
        android:id="@+id/button"
        android:background="@color/spotify"
        android:onClick="goSPOTIFY"
        android:clickable="false"
        android:layout_below="@+id/xyzButton"
        android:layout_alignLeft="@+id/xyzButton"
        android:layout_alignStart="@+id/xyzButton"
        style="@style/buttonStyle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/APP_CAPSTONE"
        android:id="@+id/button2"
        android:background="@color/capstone"
        android:onClick="goLibrary"
        android:clickable="false"
        android:layout_below="@+id/libButton"
        style="@style/buttonStyle" />

</RelativeLayout>
